# python-package-example-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.__project_kebab}}/: .autoenv.zsh  .autoenv_leave.zsh  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  pyproject.toml  pyrightconfig.json  {{cookiecutter.__gitignore}}
{{cookiecutter.__project_kebab}}/tests/: test_package.py
{{cookiecutter.__project_kebab}}/{{cookiecutter.__project_slug}}/: __init__.py  main.py
