[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "{{cookiecutter.__project_slug}}"
authors = [{ name = "{{cookiecutter.author_full_name}}", email = "{{cookiecutter.author_email}}" }]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = []


# If python only supposed to be imported, it must have lib.py file
# If package has executable, put it into main.py file and uncomment
# scritps section below

# [project.scripts]
# {{cookiecutter.__project_kebab}} = "{{cookiecutter.__project_slug}}.main:main"


[project.optional-dependencies]
test = [
    "pytest >=7.4.3,<9.0.0",
]
lint = [
    "pytest >=7.4.3,<9.0.0",
    "pyright",
    "pylint",
]

[tool.isort]
profile = "black"


[tool.pylint.messages_control]
disable = "C0115, R0903, C0116, R1734, R1735, E0401, E0611, W0511, R0801, R0902, R0913"


[tool.pylint.format]
max-line-length = "120"


[tool.black]
include = "{{cookiecutter.__project_slug}}"


[tool.coverage.run]
source = ['{{cookiecutter.__project_slug}}']


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
